@@ -34,6 +34,5 @@
 #define SC_ARG3_ADDR (SC_REG_SIZE * EDX)
 #define SC_ARG4_ADDR (SC_REG_SIZE * ESI)
 #define SC_ARG5_ADDR (SC_REG_SIZE * EDI)
-#define OFFSET(x) ((long) x & (sizeof (int) - 1))
 
 #include "linux_generic.c"
