@@ -1,5 +1,9 @@
 2011-11-08  Giuseppe Scrivano  <giuseppe@southpole.se>
 
+	* src/arch/linux_generic.c (OFFSET) [! OFFSET]: Define macro.
+	* src/arch/linux_i386.c (OFFSET): Remove definition.
+	* src/arch/linux_x86_64.c (OFFSET): Likewise.
+
 	* src/roach.h (roach_get_sc): Change return type to long.
 	(roach_set_sc): Likewise.
 	(roach_set_sc_ret): Likewise.
